Update PartnerServiceTest.java